# dserver-retrieve-plugin-mongo

./: CHANGELOG.rst  CITATION.cff  LICENSE.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
dserver_retrieve_plugin_mongo/: __init__.py  config.py  utils_retrieve.py
dtool_lookup_server_retrieve_mongo_plugin/: __init__.py
dtool_lookup_server_retrieve_plugin_mongo/: __init__.py  config.py  utils_retrieve.py
tests/: conftest.py  test_config_route.py  test_dserver-retrieve-plugin-mongo_package.py  test_dtool-lookup-server-retrieve-mongo-plugin_package.py  test_dtool-lookup-server-retrieve-plugin-mongo_package.py  test_utils_retrieve_standalone.py  utils.py
